--- a/01/src/styles/abstracts/_themes.scss
+++ b/01/src/styles/abstracts/_themes.scss
@@ -1,16 +1,37 @@
- @use './colors' as *;
+//  @use './colors' as *;
 
+
+// $theme-light: (
+//   heading: $heading,
+//   text: $text,
+//   background: $color-background-light,
+//   );
+
+// $theme-dark: (
+//   heading: rgba(255, 255, 255, 0.95),
+//   text: rgba(255, 255, 255, 0.7),
+//   background: $color-background-dark
+// );
+
+// @mixin apply-theme($theme-map) {
+//   --color-heading: #{map-get($theme-map, heading)};
+//   --color-text: #{map-get($theme-map, text)};
+//   --color-background: #{map-get($theme-map, background)};
+// }
+
+@use './colors' as *;
 
 $theme-light: (
   heading: $heading,
   text: $text,
-  background: $color-background-light,
+  //background: lighten($background, 50%),
+  background: yellow,
   );
 
 $theme-dark: (
-  heading: rgba(255, 255, 255, 0.95),
-  text: rgba(255, 255, 255, 0.7),
-  background: $color-background-dark
+  heading: lighten($heading, 50%),
+  text: lighten($text, 50%),
+  background: $background
 );
 
 @mixin apply-theme($theme-map) {
